--- a/assets/grayscale/css/grayscale.css
+++ b/assets/grayscale/css/grayscale.css
@@ -124,7 +124,6 @@ a:focus {
     display: table;
     width: 100%;
     height: auto;
-    padding: 100px 0;
     text-align: center;
     color: #fff;
     background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
@@ -151,7 +150,8 @@ a:focus {
 @media(min-width:767px) {
     .intro {
         height: 100%;
-        padding: 0;
+        padding-top:110px;
+	padding-bottom:110px;
     }
 
     .brand-heading {
