--- a/assets/grayscale/css/grayscale.css
+++ b/assets/grayscale/css/grayscale.css
@@ -1,11 +1,22 @@
-body {
-    width: 100%;
-    height: 100%;
-    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    color: #fff;
-    background-color: #000;
+textarea {
+color:black;
 }
-
+input {
+color:black;
+}
+footer .footer-below {
+padding: 25px 0;
+background-color: #233140;
+}
+#download {
+padding-top:10%;
+}
+.navbar-default .navbar-nav>li>a {
+color: white;
+}
+.navbar-default .navbar-brand {
+color: white;
+}
 html {
     width: 100%;
     height: 100%;
@@ -19,7 +30,6 @@ h5,
 h6 {
     margin: 0 0 35px;
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
 }
@@ -29,7 +39,6 @@ p {
     font-size: 18px;
     line-height: 1.5;
 }
-
 @media(min-width:767px) {
     p {
         margin: 0 0 35px;
@@ -59,7 +68,6 @@ a:focus {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(255,255,255,.3);
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     background-color: #000;
 }
 
@@ -238,10 +246,10 @@ a:focus {
 }
 
 .content-section {
-    padding-top: 100px;
+    padding-top: 6%;
 }
 
-.download-section {
+.beauty-section {
     width: 100%;
     padding: 50px 0;
     color: #fff;
@@ -261,16 +269,16 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 250px;
+        padding-top: 10%;
     }
 
-    .download-section {
+    .beauty-section {
         padding: 100px 0;
     }
 
     #map {
         height: 400px;
-        margin-top: 250px;
+        margin-top: 10%;
     }
 }
 
