--- a/assets/sb-admin/css/sb-admin.css
+++ b/assets/sb-admin/css/sb-admin.css
@@ -10,6 +10,13 @@ For more info and more free Bootstrap 3 HTML themes, visit http://startbootstrap
 
 /* Global Styles */
 
+#customize {
+margin-top: -19px;
+border: 0;
+width: 100%;
+height: 92.2%;
+}
+
 body {
   margin-top: 50px;
 }
